# HackRx-6.0

./: .env.docker  .env.example  Dockerfile  FRONTEND_IMPLEMENTATION_COMPLETE.md  FRONTEND_INTEGRATION_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose-simple.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  research.md  setup-local.sh  setup-simple.sh
data/: insurance_rag.db
frontend/: Dockerfile  SETUP.md  middleware.ts  next.config.js  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/auth/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/chat/: page.tsx
frontend/components/: routes.tsx
frontend/components/auth/: AuthUI.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/components/chat/: InsuranceChat.tsx
frontend/components/documents/: DocumentList.tsx  DocumentUpload.tsx
frontend/components/layout/: index.tsx
frontend/components/navbar/: NavbarAdmin.tsx  NavbarLinksAdmin.tsx
frontend/components/sidebar/: Sidebar.tsx
frontend/contexts/: auth.tsx  layout.ts
frontend/styles/: globals.css
frontend/types/: types.ts
frontend/utils/: navigation.ts
src/: __init__.py  init_db.py  production_guide.py
src/agents/: base_agent.py  evaluation_agent.py  orchestrator.py  query_parser_agent.py  response_generator_agent.py  retrieval_agent.py
src/config/: settings.py
src/core/: __init__.py  config.py
src/models/: database.py  schemas.py
src/routes/: auth.py  chat.py  documents.py  health.py
src/services/: auth_service.py  qdrant_service.py  trieve_service.py
(+5 files in other folders)
